--- a/src/App.css
+++ b/src/App.css
@@ -40,3 +40,72 @@
 .read-the-docs {
   color: #888;
 }
+
+.spinner {
+  width: 40px;
+  height: 40px;
+
+  position: relative;
+  margin: 100px auto;
+}
+
+.double-bounce1, .double-bounce2 {
+  width: 100%;
+  height: 100%;
+  border-radius: 50%;
+  background-color: #072dec;
+  opacity: 0.6;
+  position: absolute;
+  top: 0;
+  left: 0;
+  
+  -webkit-animation: sk-bounce 2.0s infinite ease-in-out;
+  animation: sk-bounce 2.0s infinite ease-in-out;
+}
+
+.double-bounce2 {
+  -webkit-animation-delay: -1.0s;
+  animation-delay: -1.0s;
+}
+
+@-webkit-keyframes sk-bounce {
+  0%, 100% { -webkit-transform: scale(0.0) }
+  50% { -webkit-transform: scale(1.0) }
+}
+
+@keyframes sk-bounce {
+  0%, 100% { 
+    transform: scale(0.0);
+    -webkit-transform: scale(0.0);
+  } 50% { 
+    transform: scale(1.0);
+    -webkit-transform: scale(1.0);
+  }
+}
+
+/* CSS by me */
+.link-style {
+  color: #007bff; /* Link color, adjust as needed */
+  text-decoration: underline; /* Underline the text to indicate a link */
+  cursor: pointer; /* Set cursor to pointer to indicate interactivity */
+}
+
+.contact-details {
+  text-align: left; /* Align the content to the left */
+  padding: 20px; /* Add padding for spacing */
+}
+
+.contact-details ul {
+  list-style: none; /* Remove default list styles */
+  padding: 0;
+}
+
+.contact-details li {
+  margin-bottom: 10px; /* Add margin between list items */
+}
+
+.gb-color {
+  background-color: #007bff;
+  color: #fff;
+}
+
